# Clyde-RBM

./: .CMakeLists.txt.swp  CMakeLists.txt  Exampleconfig.cfg  README.md  gmon.out
cmake/: Dependencies.cmake
cmake/modules/: LibFindSmart.cmake
examples/: Adaptive_Energy_Mode.cpp  Adaptive_Energy_Mode2.cpp  Adaptive_reconstruction.cpp  CMakeLists.txt  Compute_Adaptive_reconstruction.cpp  Compute_best_Method.cpp  Compute_error_out_of_T.cpp  Compute_response_surface.cpp  LaminarAirfoil.cpp  prova.cpp  stackOverflow.cpp  template_example.cpp
include/: Basis_Extraction.hpp  CConfig.hpp  Create_snapset.hpp  Extract_Basis.hpp  Generate_snset.hpp  Reconstruction.hpp  Targets.hpp  read_Inputs.hpp  write_Outputs.hpp
src/: Basis_Extraction.cpp  CConfig.cpp  Create_snapset.cpp  Extract_Basis.cpp  Generate_snset.cpp  Reconstruction.cpp  Targets.cpp  main.cpp  read_Inputs.cpp  write_Outputs.cpp
